--- a/pom.xml
+++ b/pom.xml
@@ -8,6 +8,15 @@
     <artifactId>Proctor</artifactId>
     <version>1.0-SNAPSHOT</version>
 
+    <dependencies>
+        <dependency>
+            <groupId>org.projectlombok</groupId>
+            <artifactId>lombok</artifactId>
+            <version>1.18.16</version>
+            <scope>provided</scope>
+        </dependency>
+    </dependencies>
+
     <build>
         <defaultGoal>plugin install</defaultGoal>
         <plugins>
@@ -50,4 +59,5 @@
             </plugin>
         </plugins>
     </build>
+
 </project>
